# AllTheWorldAPlay

./: .cursor-tutor.code-workspace  .dockerignore  .dockerignore~  .gitignore  Dockerfile  Dockerfile.audiobook  Dockerfile.audiobook~  Dockerfile~  LICENSE  README.md  ToDo.txt  Webworld.odt  Worldsim Tech Report.odt  constraints.txt  docker-compose.yaml  docker-compose.yaml~  evaluation_data_20250616_204655.csv  evaluation_data_20250616_210307.csv  evaluation_data_20250617_083203.csv  evaluation_data_20250617_105426.csv  evaluation_data_20250617_140649.csv  fly.toml  fly.toml~  requirements.txt  start-Qwen3.sh  start-ablation.sh  start-mistral.sh  start-openRouter.sh  start-openai.sh  start.sh  start_audiobook.sh  start_audiobook.sh~  test_dynamic_resources.py  test_integrate_task_plans.py  test_integrate_task_plans_forced_clusters.py  test_integrate_task_plans_simple.py  test_setting.py
docs/: .~lock.Playground.odt#  Evaluation.odt  LLM_Characters.odt  Playground.odt  Smallville.odt  flowchart TB.md  flowchartTB.html  lost.odt
ros/: .rosrc  DEV_SETUP.md  LLM_INTEGRATION_GUIDE.md  QUICK_START.md  README.md  TEXTSENSOR_LLM_EXAMPLE.md  demo_console_input.md  launch_all_nodes.py  package.xml  run_test.sh  run_with_owl_venv.sh  setup.cfg  setup.py  test_cognitive_system.py  test_console_input.py  test_textsensor_llm_action.py
ros/cognitive_framework/: __init__.py  action_node.py  action_node_with_llm.py  llm_client.py  llm_service_node.py  memory_node.py  sense_node.py  simple_llm_action_example.py
ros/launch/: cognitive_system.launch.py
src/: #notes#  #xml#  .#notes  (+32 more)
(+276 files in other folders)
